Compiles both with 'stable' and 'nightly--2024-06-01'

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,10 @@
+# .cargo/config.toml
+#
 [env]
 DEFMT_LOG="info"
+
+#[build.'cfg(chip = "eps32c6")']
+#target    = "riscv32imac-unknown-none-elfAA"
 
 [build]
 target    = "riscv32imac-unknown-none-elf"
