--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
-channel    = "nightly-2024-06-01"
-components = ["rust-src"]
+#channel    = "nightly-2024-06-01"
+#channel = "stable"
+#components = ["rust-src"]      # no need; it's the sources for the _std_ library (and we do 'no-std')
 targets    = ["riscv32imac-unknown-none-elf"]
