--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@
 [env]
 DEFMT_LOG="info"
 
-# Cannot steer 'target', can we? tbd.
+# Cannot steer 'target'
 #
 #[build.'cfg(feature = "eps32c3")']
 #target    = "riscv32imc-unknown-none-elf"
@@ -14,13 +14,13 @@ DEFMT_LOG="info"
 rustflags = [
   "-C", "link-arg=-Tdefmt.x",
   "-C", "link-arg=-Tlinkall.x",
-  # NOTE: This is required to obtain backtraces, however it may negatively
-  #       impact the performance of your application.
+
+  # NOTE: Required to obtain backtraces, however it may negatively impact the performance of your application.
   "-C", "force-frame-pointers",
 ]
 
-[target.riscv32imac-unknown-none-elf]
-runner = "probe-rs run --chip=esp32c6"
+#R[target]
+#Rrunner = "probe-rs run --chip xxx"
 
 [unstable]
 build-std = ["core"]
