--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,19 +9,18 @@ defmt            = "0.3.8"
 defmt-rtt        = "0.4.1"
 embassy-executor = { version = "0.5.0" }    # +"defmt"
 embassy-time     = { version = "0.3.1", features = ["generic-queue-8"] }
-esp-backtrace    = { version = "0.13.0", features = ["exception-handler", "panic-handler"] }   # "esp32c{36}" centrally; +"defmt"
-esp-hal          = { version = "0.19.0", features = ["async"] }                                # "esp32c{36}" centrally; +"defmt"
-esp-hal-embassy  = { version = "0.2.0",  features = [] }                                        # "esp32c{36}" centrally; +"defmt"
+esp-backtrace    = { version = "0.13.0", features = ["exception-handler", "panic-handler"] }   # +{mcu}; +"defmt"
+esp-hal          = { version = "0.19.0", features = ["async"] }                                # +{mcu}; +"defmt"
+esp-hal-embassy  = { version = "0.2.0",  features = [] }                                        # +{mcu}; +"defmt"
 static_cell      = { version = "2.1.0" }
-#Rriscv-atomic-emulation-trap = { version = "0.4.1", optional = true }
 
 # 'esp32c' (when not using 'defmt') dependencies:
-esp-println      = { version = "0.10.0", features = ["esp32c3", "log"], optional = true }  # esp32c3 only
-log              = { version = "0.4.20", optional = true }      # esp32c only
+esp-println      = { version = "0.10.0", features = ["esp32c3", "defmt-espflash"], optional = true }
+#log              = { version = "0.4.22", optional = true }
 
 [features]
 nightly = ["embassy-executor/nightly", "static_cell/nightly"]
-default = []
+default = ["defmt"]
 
 esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3",
     "esp-println?/esp32c3",
@@ -37,7 +36,6 @@ defmt = [
     "esp-hal-embassy/defmt"
 ]
 
-# ESP32-C3 cannot be used with 'probe-rs run' (WISH IT COULD!!!)
 println = [
     "esp-backtrace/println",
     "esp-hal-embassy/log",
